# tracking

./: .gitattributes  .gitignore  LICENSE  Literature.md  README.md  data_association.py  pyproject.toml  requirements.txt  run_example.py  setup.py  stereo.py  stereo_track_fishes.ipynb  tracking.ipynb  utils.py  visualize.py
configs/: match_gt_stereo_tracks.yaml  plot_tracks.yaml  stereo_track.yaml  track.yaml
docs/: description.md
exps/: README.md  data_al_v1.py  data_and_exps.md  data_prepration_v1.py  data_stats.py  data_v1.py  data_v1_old.sh  data_v2.py  data_v3.py  fish_tracks.py  inference_al.py  match_stereo_tracks.py  multi_stage_ass.py  stereo_deep_features.py
exps/old/: script_match_gt_stereo_rectified_tracks.py  stereo_gt.py  tests_stereo.py  tracklet_operations.py
notebooks/: stereo_track_fishes.ipynb  track_fishes.ipynb
scripts/: association_alg1.py  association_alg2.py  match_gt_stereo_tracks.py  match_stereo_tracks.py  plot_tracks_in_video.py  stereo_track_fishes.py  track_fishes.py  track_fishes2.py  training_al.py
tests/: test_multi_stage_tracking.py  tests_data_association.py
tests/data/: 04_07_22_2_F_annotations.txt  04_07_22_F_2_rect_valid_82.txt  04_07_22_F_2_rect_valid_gt.txt  04_07_22_G_2_rect_valid_1.txt  04_07_22_G_2_rect_valid_2.txt  04_07_22_G_2_rect_valid_3.txt  04_07_22_G_2_rect_valid_82.txt  (+32 more)
tracking/: association_learning.py  data_association.py  multi_stage_ass.py  multi_stage_tracking.py  postprocess.py  stats.py  stereo.py  stereo_gt.py  stereo_track.py  tracklet_operations.py  utils.py  utils_general.py  visualize.py
