[project]
name = "fish_tracking"
version = "0.1.0"
description = "Tracking fishes in video, with and without stereo setup"
authors = [
    {name = "Fatemeh Karimi Nejadasl", email="f.kariminejasdasl@uva.nl"},
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

dynamic = ["dependencies"]
[tool.hatchling.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
homepage = "https://github.com/fkariminejadasl/tracking"
#documentation = "https://github.com/fkariminejadasl/tracking"
#repository = "https://github.com/fkariminejadasl/tracking"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
#line-length = 120
